@@ -1,4 +1,4 @@
-botocore==0.105.0
+botocore==0.107.0
 jmespath==0.7.0
 click==4.0
 netaddr==0.7.14
